erDiagram
    USERS {
        uuid Id PK
        string Email
        string HashPassword
    }

    STUDYGOALS {
        uuid Id PK
        uuid UserId FK
        string Title
        string Description
        int Type
        datetime StartDate
        datetime EndDate
        int Status
    }

    MILESTONES {
        uuid Id PK
        uuid StudyGoalId FK
        string Title
        datetime StartDateTime
        datetime EndDateTime
        datetime DueDateTime
        int Status
    }

    STUDYSESSIONS {
        uuid Id PK
        uuid UserId
        uuid GoalId
        datetime StartTime
        datetime EndTime
        int DurationMinutes
    }

    STUDYSESSIONPLANS {
        uuid Id PK
        uuid MilestoneId FK
        datetime PlannedStart
        int PlannedMinutes
        int Status
    }

    REFRESHTOKENS {
        uuid Id PK
        uuid UserId FK
        string Token
        string JwtId
        bool IsUsed
        bool IsRevoked
        datetime ExpiryDate
    }

    LEARNINGTIMERS {
        uuid Id PK
        datetime StartedAt
        datetime StoppedAt
        int State
    }

    REMINDERS {
        uuid Id PK
        uuid UserId
        string Message
        datetime ReminderTime
        bool IsSent
    }

    USERS ||--o{ STUDYGOALS : owns
    USERS ||--o{ REFRESHTOKENS : has
    STUDYGOALS ||--o{ MILESTONES : contains
    MILESTONES ||--o{ STUDYSESSIONPLANS : plans
    MILESTONES ||--o{ STUDYSESSIONS : tracked_via_GoalId
